2023-04-21  Bruno Haible  <bruno@clisp.org>

	Make sure unicase.h gets a definition of LIBUNISTRING_DLL_VARIABLE.
	* gnulib-local/lib/unicase.in.h.diff: Add a
	'#include <unistring/woe32dll.h>', instead of relying on uninorm.h to
	include it indirectly.

2023-01-29  Bruno Haible  <bruno@clisp.org>

	Fix a bug in the *printf functions.
	Applies gnulib change
	2023-01-28  Bruno Haible  <bruno@clisp.org>
		unistdio/*printf: Fix negative width handling for %U, %lU, %llU.
		* lib/vasnprintf.c (VASNPRINTF): In the code for %U, %lU, %llU,
		test for the FLAG_LEFT bit in the flags variable.
		* tests/unistdio/test-u8-printf1.h (test_xfunction): Add tests
		for width given as argument for the directives %U, %lU, %llU,
		%s, %a, %f, %e, %g.
		* tests/unistdio/test-u16-printf1.h (test_xfunction): Likewise.
		* tests/unistdio/test-u32-printf1.h (test_xfunction): Likewise.
		* tests/unistdio/test-ulc-printf1.h (test_xfunction): Likewise.
	* NEWS: Mention the fix.

2022-09-18  Bruno Haible  <bruno@clisp.org>

	stdbool.mini.h: Improvements for MSVC 14 and Sun C++.
	Applies gnulib changes
	2022-09-04  Bruno Haible  <bruno@clisp.org>
		* stdbool.in.h (_Bool, bool, false, true): In C++ mode with
		MSVC 14, don't define these as macros.
	2022-09-18  Bruno Haible  <bruno@clisp.org>
		* stdbool.in.h (true): Redefine if it does not evaluate to 1 in
		the preprocessor.

2022-07-18  Bruno Haible  <bruno@clisp.org>

	Move gnulib-tool invocation back from autopull.sh to autogen.sh.
	* autogen.sh: Revert last change. Improve comments.
	* autopull.sh: Only call 'gitsub.sh pull'.
	* m4/init-package-version.m4: Revert last change.

2022-07-17  Bruno Haible  <bruno@clisp.org>

	Split autogen.sh into autopull.sh and autogen.sh.
	* autopull.sh: New file, based on autogen.sh.
	* autogen.sh: Remove code that was moved to autopull.sh. Remove
	--skip-gnulib option.
	* HACKING: Mention autopull.sh.
	* m4/init-package-version.m4: Update comment.

2022-05-22  Bruno Haible  <bruno@clisp.org>
