@@ -1,3 +1,11 @@
+2023-05-21  Bruno Haible  <bruno@clisp.org>
+
+	Support creating shared libraries on Hurd/x86_64.
+	Patch from
+	<https://lists.gnu.org/archive/html/bug-hurd/2023-05/msg00086.html>.
+	* m4/libtool.m4 (_LT_ENABLE_LOCK): Treat Hurd/x86_64 like
+	Linux/x86_64.
+
 2023-04-21  Bruno Haible  <bruno@clisp.org>
 
 	Make sure unicase.h gets a definition of LIBUNISTRING_DLL_VARIABLE.
